<resources>
    <string name="app_name">Assignment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="question1">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>